[package]
name = "enum_narsese"
version = "0.4.2"
edition = "2021"

[dependencies]
# 【2024-03-13 21:17:55】实用库现在独立为`nar_dev_utils`
nar_dev_utils = { version = "0.1.0", path = "../NAR-dev-util", features=["floats", "iterators", "str_process"] }

[features]
default = ["bundled"]
bundled = [
    "enum_narsese",
    "lexical_narsese"
]
enum_narsese = []
lexical_narsese = []
